LJSV-1275: Bugfix: comment display broken in Dystopia, Xcolibur, and ?format=light
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@17631 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/lj_base.css
+++ b/htdocs/stc/lj_base.css
@@ -1448,4 +1448,12 @@ Must be removed after implementation of Framework! */
 				max-height: 96px;
 				}
 
+/* Style for comments in Dystopia, format=light and others. */
+.talk-comment-head {
+	overflow: hidden;
+	padding:1px 0;
+	}
+
+
+
 
